Refactor isFinal checks and toList